When present, replace new text file entry by a real empty file

* not useful to be able to create a text file (which is not empty)
* due to empty file template introduced in KIO 5.96 (https://commits.kde.org/kio/da65b36c78644ce39fcb8c2db1b02461644eb81d), when KIO at lower version is used, we fallback to text file template

BUG: 297003